--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,1 +1,16 @@
+pipeline {
+    agent any
+    stages {
+        stage('Clone Git Repository') {
+            steps {
+                git branch: 'main', url: 'https://github.com/nachiketbagad/ansible.git'
+            }
+        }
 
+        stage('Run Ansible Playbook') {
+            steps {
+                ansiblePlaybook credentialsId: 'ansible-ssh', disableHostKeyChecking: true, installation: 'ansible2', inventory: 'inventory.ini', playbook: 'install_apache.yml  ', vaultTmpPath: ''
+            }
+        }
+    }
+}
